<resources>
    <string name="app_name">MyStoryApps</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or_sign_up">Or Register</string>

    <string name="register_success">Register Success</string>
    <string name="unauthorized">Email or password might be wrong</string>
    <string name="success_login">Login successfully. Hallo, </string>
    <string name="login_failed">Login Failed</string>

    <string name="name">Name</string>
    <string name="photo">Photo</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="enter_name">" Enter your Name"</string>
    <string name="enter_email">" Enter your email"</string>
    <string name="enter_password">" Enter your password"</string>

    <string name="input_name">Please input your name here</string>
    <string name="input_email">Please input your email here</string>
    <string name="input_pass">Please input your password here</string>
    <string name="invalid_email">Email is invalid</string>

    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="pass_length">Password must be 8 characters long</string>

    <string name="token_is_null">Token is null</string>

    <string name="change_language">Change Language</string>

    <string name="logout">Logout</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error">"Error : "</string>
    <string name="internal_server_error">No Internet Connection</string>
    <string name="bad_request">Try Again</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="choose_pictures">Choose Pictures</string>
    <string name="input_picture">Please input picture</string>
    <string name="input_desc">Please input description</string>
    <string name="message">Story created successfully</string>
    <string name="message_error">"Error: "</string>
    <string name="permission_error">Did not get permission</string>
    <string name="go_login">Please Login First</string>

    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="location">With location</string>

</resources>